--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Dan Soup</title>
+  <link rel="shortcut icon" href="/src/assets/images/favicon.ico"/>
 </head>
 <body>
   <div id="app"></div>
